# GenBIPOC

./: .gitignore  README.md  pyproject.toml  setup.sh  start.sh  vision.md
backend/: .env.example  main.py  requirements.txt
backend/agent/: __init__.py  agent.py
backend/data/: data_loader.py  synthetic_data.json
backend/tools/: __init__.py  comparison_tools.py  handler_tools.py  investigation_tools.py  team_tools.py  wing_tools.py
data_generator/: generate_synthetic_data.py
docs/plans/: 2026-03-12-claims-narrative-engine-design.md  2026-03-12-claims-narrative-engine.md
frontend/: index.html  package-lock.json  package.json  server.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: AgentChatPanel.jsx  AnomalyBanner.jsx  Dashboard.jsx  ExecutiveScorecard.jsx  KPICard.jsx  Navigation.jsx  RawDataTable.jsx  ToolCallCard.jsx
frontend/src/context/: DashboardContext.jsx
frontend/src/utils/: aggregator.js  anomalyDetector.js  contextBuilder.js  kpiDimensions.js
