[project]
name = "claims-performance-engine"
version = "0.1.0"
description = "AI agent that investigates why claim handler performance metrics change"
requires-python = ">=3.11"
dependencies = [
    "google-adk>=1.0.0",
    "google-cloud-aiplatform",
    "fastapi",
    "uvicorn[standard]",
    "python-dotenv",
]

[project.scripts]
generate-data = "data_generator.generate_synthetic_data:main"

[tool.setuptools.packages.find]
include = ["backend*", "data_generator*"]
